# usda-plants-scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Untitled.ipynb  ancestors.csv  characteristics.csv  config.py  input.csv  models.py  native_status.csv  old_pyproject.toml  plants.csv  plants_fetcher.py  pyproject.toml  requirements.txt  scrape.py
data/: ancestors.csv  characteristics.csv  native_status.csv  plants.csv
